# witnesskit

./: .gitignore  LICENSE  README.md  SECURITY.md  demo.py
.github/workflows/: ci.yml  codeql.yml
python/: README.md  pyproject.toml
python/tests/: test_properties.py  test_trailkit.py  test_witnesskit.py
python/trailkit/: __init__.py  canonical.py  chain.py  signing.py  verify.py
python/witnesskit/: __init__.py  canonical.py  chain.py  ed25519.py  signing.py  verify.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: canonical.ts  chain.ts  index.ts  signing.ts  verify.ts
typescript/test/: properties.test.ts  trailkit.test.ts  witnesskit.test.ts
